--- a/src/style/_overrides.scss
+++ b/src/style/_overrides.scss
@@ -19,32 +19,32 @@ $grid-gutter-width: 24px !default;
 $spacer: 1rem !default;
 $spacers: () !default;
 $spacers: map-merge(
-    (
-      0: 0,
-      1: (
-        $spacer * 0.25
-      ),
-      2: (
-        $spacer * 0.5
-      ),
-      3: $spacer,
-      4: (
-        $spacer * 1.5
-      ),
-      5: (
-        $spacer * 3
-      ),
-      6: (
-        $spacer * 4.5
-      ),
-      7: (
-        $spacer * 6
-      ),
-      8: (
-        $spacer * 7.5
-      )
-    ),
-    $spacers
+	(
+		0: 0,
+		1: (
+			$spacer * 0.25
+		),
+		2: (
+			$spacer * 0.5
+		),
+		3: $spacer,
+		4: (
+			$spacer * 1.5
+		),
+		5: (
+			$spacer * 3
+		),
+		6: (
+			$spacer * 4.5
+		),
+		7: (
+			$spacer * 6
+		),
+		8: (
+			$spacer * 7.5
+		)
+	),
+	$spacers
 );
 
 // Default font size (1rem is set to 16px)
@@ -318,34 +318,34 @@ $white: #FFFFFF;
 }
 
 .mt-1{
-  margin-tom:8px;
+  margin-top:8px;
 }
 .mt-2{
-  margin-tom:16px;
+  margin-top:16px;
 }
 .mt-3{
-  margin-tom:24px ;
+  margin-top:24px ;
 }
 .mt-4{
-  margin-tom:32px;
+  margin-top:32px;
 }
 .mt-5{
-  margin-tom:40px ;
+  margin-top:40px ;
 }
 .mt-6{
-  margin-tom:48px ;
+  margin-top:48px ;
 }
 .mt-7{
-  margin-tom:56px ;
+  margin-top:56px ;
 }
 .mt-8{
-  margin-tom:64px;
+  margin-top:64px;
 }
 .m-9{
-  margin-tom:72px;
+  margin-top:72px;
 }
 .mt-10{
-  margin-tom:80px;
+  margin-top:80px;
 }
 
 .mb-1{
@@ -377,5 +377,36 @@ $white: #FFFFFF;
 }
 .mb-10{
   margin-bottom:80px;
+}
+
+.h-1{
+  height:8px;
+}
+.h-2{
+  height:16px;
+}
+.h-3{
+  height:24px ;
+}
+.h-4{
+  height:32px;
+}
+.h-5{
+  height:40px ;
+}
+.h-6{
+  height:48px ;
+}
+.h-7{
+  height:56px ;
+}
+.h-8{
+  height:64px;
+}
+.m-9{
+  height:72px;
+}
+.h-10{
+  height:80px;
 }
 
