--- a/src/style/globals/_utilities.scss
+++ b/src/style/globals/_utilities.scss
@@ -8,12 +8,31 @@
                               supported by Chrome and Opera */
 }
 
-.outline-none {
+button{
 	&:focus,
 	&:active {
-		outline: 0;
+		outline: none;
 	}
 }
+img{
+  &:focus,
+  &:active {
+    outline: none;
+  }
+}
+link{
+  &:focus,
+  &:active {
+    outline: none;
+  }
+}
+div{
+  &:focus,
+  &:active {
+    outline: none;
+  }
+}
+
 
 .cursor-pointer {
 	cursor: pointer;
@@ -77,3 +96,120 @@
 	z-index: 1;
 }
 
+.margin-right{
+  margin: auto 0 auto auto
+}
+.margin-left{
+  margin: auto auto auto 0;
+}
+.margin-auto{
+  margin: 0 auto;
+}
+.text-right{
+  text-align: right;
+}
+.text-center{
+  align-text: center;
+}
+
+$shadow-key-umbra-opacity:      0.1 !default;
+$shadow-key-penumbra-opacity:   0.08 !default;
+$shadow-ambient-shadow-opacity: 0.05 !default;
+
+.focus-shadow {
+  box-shadow: 0 0 8px rgba(0,0,0,.18),0 8px 16px rgba(0,0,0,.36);
+}
+
+.shadow-2dp {
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, $shadow-key-penumbra-opacity),
+  0 3px 1px -2px rgba(0, 0, 0, $shadow-key-umbra-opacity),
+  0 1px 5px 0 rgba(0, 0, 0, $shadow-ambient-shadow-opacity);
+}
+
+.shadow-3dp {
+  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, $shadow-key-penumbra-opacity),
+  0 3px 3px -2px rgba(0, 0, 0, $shadow-key-umbra-opacity),
+  0 1px 8px 0 rgba(0, 0, 0, $shadow-ambient-shadow-opacity);
+}
+
+.shadow-4dp {
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, $shadow-key-penumbra-opacity),
+  0 1px 10px 0 rgba(0, 0, 0, $shadow-ambient-shadow-opacity),
+  0 2px 4px -1px rgba(0, 0, 0, $shadow-key-umbra-opacity);
+}
+
+.shadow-6dp {
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, $shadow-key-penumbra-opacity),
+  0 1px 18px 0 rgba(0, 0, 0, $shadow-ambient-shadow-opacity),
+  0 3px 5px -1px rgba(0, 0, 0, $shadow-key-umbra-opacity);
+}
+
+.shadow-8dp {
+  box-shadow: 0 8px 10px 1px rgba(0, 0, 0, $shadow-key-penumbra-opacity),
+  0 3px 14px 2px rgba(0, 0, 0, $shadow-ambient-shadow-opacity),
+  0 5px 5px -3px rgba(0, 0, 0, $shadow-key-umbra-opacity);
+}
+
+@media (min-width: 601px) {
+  .shadow-8dp-d {
+    box-shadow: 0 8px 10px 1px rgba(0, 0, 0, $shadow-key-penumbra-opacity),
+    0 3px 14px 2px rgba(0, 0, 0, $shadow-ambient-shadow-opacity),
+    0 5px 5px -3px rgba(0, 0, 0, $shadow-key-umbra-opacity);
+  }
+}
+
+
+.shadow-16dp {
+  box-shadow: 0 16px 24px 2px rgba(0, 0, 0, $shadow-key-penumbra-opacity),
+  0  6px 30px 5px rgba(0, 0, 0, $shadow-ambient-shadow-opacity),
+  0  8px 10px -5px rgba(0, 0, 0, $shadow-key-umbra-opacity);
+}
+
+.shadow-24dp {
+  box-shadow: 0  9px 46px  8px rgba(0, 0, 0, $shadow-key-penumbra-opacity),
+  0 11px 15px -7px rgba(0, 0, 0, $shadow-ambient-shadow-opacity),
+  0 24px 38px  3px rgba(0, 0, 0, $shadow-key-umbra-opacity);
+}
+.position-absolute{
+  position: absolute;
+}
+.w-100{
+  width: 100%;
+}
+.bg-white{
+  background-color: white!important;
+}
+body{
+  background-color: #F9f9f9
+}
+@media screen and (max-width: 768px) {
+  body{
+    background-color: #FFFFFF;
+  }
+}
+.border-radius-4px{
+  border-radius: 4px;
+}
+.border-radius-8px{
+  border-radius: 8px;
+}
+.border-radius-16px{
+  border-radius: 16px;
+}
+.user-image{
+  -webkit-background-size: cover!important;
+  -moz-background-size: cover!important;
+  -o-background-size: cover!important;
+  background-size: cover!important;
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+  -moz-border-radius-bottomleft: 8px!important;
+  -moz-border-radius-bottomright: 8px!important;
+
+}
+body{
+  height: 100vh!important;
+}
+h-100{
+  height: 100%;
+}
