--- a/src/style/globals/_utilities.scss
+++ b/src/style/globals/_utilities.scss
@@ -179,9 +179,9 @@ $shadow-ambient-shadow-opacity: 0.05 !default;
 .bg-white{
   background-color: white!important;
 }
-body{
-  background-color: #F9f9f9
-}
+//body{
+//  background-color: #F9f9f9
+//}
 @media screen and (max-width: 768px) {
   body{
     background-color: #FFFFFF;
